Fixes per comments.